--- a/src/test/resources/pages/adminAccountDetailsRemoveStudent.html
+++ b/src/test/resources/pages/adminAccountDetailsRemoveStudent.html
@@ -53,7 +53,7 @@
   </div>
   <div id="statusMessagesToUser">
     <div class="overflow-auto alert alert-success statusMessage">
-      The student has been removed from the course
+      The students has been removed from the course
     </div>
   </div>
   <script defer="" src="/js/statusMessage.js" type="text/javascript">
